tests/k8s_testcases/example_policies/emptinessTests/emptinessTests-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - emptinessTests-networkpolicy1.yaml
    expectedWarnings: 5
    
queries:
  - name: vacuous_policy
    vacuity:
      - np1/kube-system/enable-ingress-with-typo-in-isolatedpods
    expected: 1
  - name: non_vacuous_policies
    vacuity:
      - np1/kube-system/isolate-kube-system-specific-pods
      - np1/kube-system/enable-ingress-with-typo-in-ingress-rule-podselector
      - np1/kube-system/enable-egress-with-typo-in-egress-rule-podselector
      - np1
    expected: 0
  - name: emptiness
    emptiness:
      - np1
    expectedOutput: ../../expected_output/emptiness-in-np1.txt
    expected: 3

  - name: emptiness_yaml
    emptiness:
      - np1
    outputConfiguration:
      outputFormat: yaml
    expectedOutput: ../../expected_output/emptiness-in-np1.yaml
    expected: 3

  - name: redundancy
    redundancy:
      - np1
    expected: 4
  - name: compare_specific_policies
    equivalence:
      - np1/kube-system/isolate-kube-system-specific-pods
      - np1/kube-system/enable-ingress-with-typo-in-isolatedpods
      - np1/kube-system/enable-ingress-with-typo-in-ingress-rule-podselector
      - np1/kube-system/enable-egress-with-typo-in-egress-rule-podselector
    expected: 5

  - name: sanity_all
    sanity:
      - np1
    expected: 6
